create form category add, edit and find

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /semanas/DemoColeccion/target/
 /semanas/Semana04/target/
 /semanas/Semana05/target/
+/semanas/Sistema/target/
+/semanas/sistema/target/
+/sistemaV2/target/
